--- a/src/app/components/admin/admin-article/view/view-articles.component.html
+++ b/src/app/components/admin/admin-article/view/view-articles.component.html
@@ -78,14 +78,14 @@
             <div class="buttons-container">
               <div
                 class="remove-button-container"
-                title="Delete event"
+                title="Delete article"
                 (click)="deleteArticle(article)"
               >
                 <i class="fa fa-trash-o" aria-hidden="true"></i>
               </div>
               <div
                 class="modify-button-container"
-                title="Edit event"
+                title="Edit article"
                 [routerLink]="['/admin/articles/modify', article.id]"
               >
                 <i class="fa fa-pencil-square-o" aria-hidden="true">
