--- a/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/components/admin/admin-header/sidebar-menu/sidebar-menu.component.html
@@ -175,7 +175,10 @@
           style="font-size: 16px"
           class="fa fa-arrow-left"></i>
       </div>
-      <p>Home</p>
+      <p
+        (click)="moveVerticalMenu();toggleDropdownMenu('pages');"
+        routerLink="admin/home"
+      >Home</p>
       <p>About</p>
     </div>
 
