--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -21,7 +21,7 @@
     -->
     <div class="container-menu-login">
       <ul id="menu" class="menu">
-        <li><a routerLink="/" >{{ "home" | translate }}</a></li>
+        <li><a routerLink="/" >{{ "home.nav-title" | translate }}</a></li>
         <li><a routerLink="/events" >{{ "events" | translate }}</a></li>
         <li><a routerLink="/articles" >{{ "articles.nav-title" | translate }}</a></li>
         <li><a routerLink="about" >{{ "about.nav-title" | translate }}</a></li>
