--- a/src/app/components/home/home-slideshow/home-slideshow.component.html
+++ b/src/app/components/home/home-slideshow/home-slideshow.component.html
@@ -18,8 +18,8 @@
         />
       </c-carousel-item>
     </c-carousel-inner>
-    <c-carousel-control [routerLink] caption="Previous" direction="prev"></c-carousel-control>
-    <c-carousel-control [routerLink] caption="Next" direction="next"></c-carousel-control>
+    <c-carousel-control caption="Previous" direction="prev"></c-carousel-control>
+    <c-carousel-control caption="Next" direction="next"></c-carousel-control>
     <p
       class="title-slideshow"
     >{{description}}</p>
