--- a/src/app/components/home/home-slideshow/home-slideshow.component.html
+++ b/src/app/components/home/home-slideshow/home-slideshow.component.html
@@ -11,11 +11,18 @@
 >
   <c-carousel [interval]="3000">
     <c-carousel-inner>
-      <c-carousel-item *ngFor="let slide of images">
-        <img
-          [src]="slide"
-          alt="slider-image"
-        />
+      <c-carousel-item
+        *ngFor="let slide of images"
+        style="border-radius: 8px;"
+      >
+        <div
+          style="border-radius: 8px;"
+        >
+          <img
+            [src]="slide"
+            alt="slider-image"
+          />
+        </div>
       </c-carousel-item>
     </c-carousel-inner>
     <c-carousel-control caption="Previous" direction="prev"></c-carousel-control>
