--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -22,7 +22,7 @@
     <div class="container-menu-login">
       <ul id="menu" class="menu">
         <li><a routerLink="/" >{{ "home.nav-title" | translate }}</a></li>
-        <li><a routerLink="/events" >{{ "events" | translate }}</a></li>
+        <li><a routerLink="/events" >{{ "events.nav-title" | translate }}</a></li>
         <li><a routerLink="/articles" >{{ "articles.nav-title" | translate }}</a></li>
         <li><a routerLink="about" >{{ "about.nav-title" | translate }}</a></li>
       </ul>
