FINISHED THE CREATION AND THE MODIFICATION OF SOCIETY'S MEMBERS

--- a/src/app/components/admin/admin-article/modify/articles-modify.component.html
+++ b/src/app/components/admin/admin-article/modify/articles-modify.component.html
@@ -113,7 +113,7 @@
         >
       </div>
       <div
-        *ngIf="coverPhotoFormControl.dirty || submitted"
+        *ngIf="coverPhotoFormControl.dirty || (submitted && coverPhotoFormControl.dirty)"
         class="invalid-input"
       >
         <div
