FINISHED THE CREATION AND THE MODIFICATION OF SOCIETY'S MEMBERS

--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -44,7 +44,7 @@
           class="writer-info-container"
         >
           <div>
-            <img [src]="mapMemberPhoto.get(article.email!)" alt="member-photo">
+            <img [src]="mapMemberPhotos.get(article.email!)" alt="member-photo">
           </div>
 
           <div
@@ -112,7 +112,7 @@
           id="member{{i}}"
         >
           <div>
-            <img [src]="mapMemberPhoto.get(member.email!)" alt="member-photo">
+            <img [src]="mapMemberPhotos.get(member.email!)" alt="member-photo">
           </div>
 
           <div
